hero section design completed

--- a/index.html
+++ b/index.html
@@ -6,14 +6,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Assignment 05</title>
 </head>
+<!-- font awesome cdn -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- daisyui cdn -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
 <!-- tailwind cdn -->
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-
 <body>
+    <section class="w-full">
 
+        <div class="max-w-[1800px] mx-auto flex justify-between items-center px-6 py-4">
+            <!-- navbar -->
+            <div class="flex items-center gap-3">
+                <img src="./assets/logo.png" class="h-[60px]" alt="">
+                <h1 class="text-3xl font-bold text-[#006747] leading-tight">
+                    Emergency <br> Service
+                </h1>
+            </div>
+            <div class="flex items-center gap-6">
+                <div
+                    class="w-[123px] h-[52px] rounded-full bg-[#00A63E] flex justify-center items-center text-white font-semibold">
+                    Copy
+                </div>
+                <div
+                    class="w-[123px] h-[52px] rounded-full bg-[#00A63E] flex justify-center items-center text-white font-semibold">
+                    Copy
+                </div>
+                <div
+                    class="w-[123px] h-[52px] rounded-full bg-[#00A63E] flex justify-center items-center text-white text-lg font-semibold">
+                    Copy
+                </div>
+            </div>
+        </div>
+
+
+        <!-- banner section -->
+        <div class="max-w-[1920px] h-[240px] mx-auto bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] 
+         flex flex-col items-center justify-center text-center text-white py-4">
+
+            <img src="./assets/logo-dark.png" class="max-h-[80px] mb-4" alt="">
+            <h1 class="text-4xl font-bold mb-4">Emergency Service Directory</h1>
+            <p class="font-semibold text-lg">Government Emergency Services at Your Fingertip – A Project by Government
+                of the
+                People’s Republic of Bangladesh</p>
+        </div>
+    </section>
+
+
+    <div class="bg-[#f4f5f7] max-w-[1800px] mx-auto my-8">
+        <div class=" bg-white rounded-b-xl p-2">
+            <div class="min-h-[950px] grid grid-cols-4 gap-8">
+                <div id="btn-add-money" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/wallet1.png" class="mx-auto" alt="">
+                    <h2>Add Money</h2>
+                </div>
+                <div id="btn-cash-out" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/send1.png" class="mx-auto" alt="">
+                    <h2>Cash Out</h2>
+                </div>
+                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/money1.png" class="mx-auto" alt="">
+                    <h2>Transfer Money</h2>
+                </div>
+                <div class="row-span-3 border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/bonus1.png" class="mx-auto" alt="">
+                    <h2>Get Bouns</h2>
+                </div>
+                <div class=" border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/purse1.png" class="mx-auto" alt="">
+                    <h2>Pay Bill</h2>
+                </div>
+                <div class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/transaction1.png" class="mx-auto" alt="">
+                    <h2>Transactions</h2>
+                </div>
+
+                <div id="btn-add-money" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/wallet1.png" class="mx-auto" alt="">
+                    <h2>Add Money</h2>
+                </div>
+                <div id="btn-cash-out" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/send1.png" class="mx-auto" alt="">
+                    <h2>Cash Out</h2>
+                </div>
+                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/money1.png" class="mx-auto" alt="">
+                    <h2>Transfer Money</h2>
+                </div>
+                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
+                    <img src="./assets/money1.png" class="mx-auto" alt="">
+                    <h2>Transfer Money</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
