--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Assignment 05</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" ... />
 </head>
-<!-- font awesome cdn -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-<!-- daisyui cdn -->
-<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+/>
 <!-- tailwind cdn -->
 <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
+<!-- daisyui cdn -->
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+
+
 <body>
     <section class="w-full">
-
         <div class="max-w-[1800px] mx-auto flex justify-between items-center px-6 py-4">
+
             <!-- navbar -->
+
             <div class="flex items-center gap-3">
                 <img src="./assets/logo.png" class="h-[60px]" alt="">
                 <h1 class="text-3xl font-bold text-[#006747] leading-tight">
@@ -42,8 +43,8 @@
             </div>
         </div>
 
-
         <!-- banner section -->
+
         <div class="max-w-[1920px] h-[240px] mx-auto bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] 
          flex flex-col items-center justify-center text-center text-white py-4">
 
@@ -55,55 +56,131 @@
         </div>
     </section>
 
+    <!-- different service center -->
 
-    <div class="bg-[#f4f5f7] max-w-[1800px] mx-auto my-8">
-        <div class=" bg-white rounded-b-xl p-2">
-            <div class="min-h-[950px] grid grid-cols-4 gap-8">
-                <div id="btn-add-money" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/wallet1.png" class="mx-auto" alt="">
-                    <h2>Add Money</h2>
+    <div class="max-w-[1800px] mx-auto py-10">
+        <div class="min-h-[950px] grid grid-cols-4 gap-8 items-stretch">
+            <div class="border-1 border-gray-200 text-center rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div id="btn-cash-out" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/send1.png" class="mx-auto" alt="">
-                    <h2>Cash Out</h2>
+                <h2 class="text-3xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">National Emergency Service</p>
+                <p class="font-3xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+                <div class="flex justify-between gap-4">
+                    <button class="bg-white text-gray-600 w-full rounded-md border border-gray-300"><i
+                            class="fa-regular fa-copy"></i>
+                        Copy
+                    </button>
+                    <button class="bg-[#00A63E] text-white w-full rounded-md"><i class="fa-solid fa-phone"></i>
+                        Call
+                    </button>
                 </div>
-                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/money1.png" class="mx-auto" alt="">
-                    <h2>Transfer Money</h2>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div class="row-span-3 border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/bonus1.png" class="mx-auto" alt="">
-                    <h2>Get Bouns</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start text-xl">National Emergency Service</p>
+                <p class="text-start text-3xl font-bold">999</p>
+                <p class="text-start text-xl">Ambulance</p>
+                <div class="flex justify-between gap-4">
+                    <button class="bg-white text-gray-600 h-9 w-full rounded-md border border-gray-300"><i
+                            class="fa-regular fa-copy"></i>
+                        Copy
+                    </button>
+                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-md"><i class="fa-solid fa-phone"></i>
+                        Call
+                    </button>
                 </div>
-                <div class=" border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/purse1.png" class="mx-auto" alt="">
-                    <h2>Pay Bill</h2>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/transaction1.png" class="mx-auto" alt="">
-                    <h2>Transactions</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div
+                class="row-span-3 border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-
-                <div id="btn-add-money" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/wallet1.png" class="mx-auto" alt="">
-                    <h2>Add Money</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div id="btn-cash-out" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/send1.png" class="mx-auto" alt="">
-                    <h2>Cash Out</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/money1.png" class="mx-auto" alt="">
-                    <h2>Transfer Money</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <div id="btn-transfer" class="border-1 border-gray-200 text-center p-3 rounded-xl">
-                    <img src="./assets/money1.png" class="mx-auto" alt="">
-                    <h2>Transfer Money</h2>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
+                </div>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
+                </div>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
             </div>
         </div>
     </div>
-
     <script src="./script.js"></script>
 </body>
 
