different section perfected

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
     </section>
 
     <!-- different service center -->
-
-    <div class="max-w-[1800px] mx-auto py-10">
-        <div class="min-h-[950px] grid grid-cols-4 gap-8 items-stretch">
-            <div class="border-1 border-gray-200 text-center rounded-xl h-full flex flex-col justify-between">
+    <div class="bg-[#F5FFF6] max-w-[1800px] mx-auto py-12">
+        <div class="min-h-[1200px] grid grid-cols-4 gap-6 items-stretch">
+            <div class="bg-white border-1 border-gray-200 text-center rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
                     <i class="fa-regular fa-heart fa-2xl"></i>
@@ -98,66 +97,62 @@
                     </button>
                 </div>
             </div>
-            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
-                <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+            <!-- Fire service -->
+            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600">
+                    <div class="bg-gray-100 p-3 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
+                            alt="">
+                    </div>
                     <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
+                <h2 class="text-3xl font-bold text-start">Fire Service Number</h2>
+                <p class="text-start text-lg">Fire Service</p>
+                <p class="text-start text-2xl font-bold">999</p>
+                <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-xl">Fire</button>
+                <div class="flex justify-between gap-4 py-2">
+                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                            class="fa-regular fa-copy"></i>
+                        Copy
+                    </button>
+                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                        Call
+                    </button>
+                </div>
             </div>
-            <div
-                class="row-span-3 border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
-                <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+            <!-- call history -->
+            <div class="row-span-3 border-1 border-gray-200 p-6 rounded-xl h-full">
+                <div class="flex justify-between items-center p-2">
+                    <div class="flex justify-between items-center gap-14">
+                        <div class="flex justify-center items-center gap-2">
+                            <i class="fa-regular fa-clock fa-2xl"></i>
+                            <h2 class="text-2xl font-semibold">Call History</h2>
+                        </div>
+                        <button
+                            class="w-[130px] h-[60px] rounded-full bg-[#00A63E] text-xl font-semibold text-white">Clear</button>
+                    </div>
                 </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
             </div>
-            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <!-- Fire service -->
+            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <div class="bg-gray-100 p-4 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
+                            alt="">
+                    </div>
                     <i class="fa-regular fa-heart fa-2xl"></i>
                 </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
-            </div>
-            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
-                <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                <h2 class="text-3xl font-semibold text-start">Fire Service Number</h2>
+                <p class="text-start text-xl">Fire Service</p>
+                <p class="text-start text-3xl font-bold">999</p>
+                <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-xl">Fire</button>
+                <div class="flex justify-between gap-4">
+                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                            class="fa-regular fa-copy"></i>
+                        Copy
+                    </button>
+                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                        Call
+                    </button>
                 </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
-            </div>
-            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
-                <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
-                    <i class="fa-regular fa-heart fa-2xl"></i>
-                </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
-            </div>
-            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
-                <div class="flex justify-between items-center border border-red-600 p-2">
-                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
-                    <i class="fa-regular fa-heart fa-2xl"></i>
-                </div>
-                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
-                <p class="text-start">Nation Emergency Service</p>
-                <p class="font-2xl text-start">999</p>
-                <p class="text-start">ambulance</p>
             </div>
             <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600 p-2">
@@ -179,9 +174,48 @@
                 <p class="font-2xl text-start">999</p>
                 <p class="text-start">ambulance</p>
             </div>
-        </div>
-    </div>
-    <script src="./script.js"></script>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
+                </div>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <div class="border-1 border-gray-200 text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <img src="./assets/emergency.png" class="max-h-[40px]" alt="">
+                    <i class="fa-regular fa-heart fa-2xl"></i>
+                </div>
+                <h2 class="text-2xl font-bold text-start">Nation Emergency Service</h2>
+                <p class="text-start">Nation Emergency Service</p>
+                <p class="font-2xl text-start">999</p>
+                <p class="text-start">ambulance</p>
+            </div>
+            <!-- last service -->
+            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+                <div class="flex justify-between items-center border border-red-600 p-2">
+                    <div class="bg-gray-100 p-4 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
+                            alt="">
+                    </div>
+                    <i class="fa-regular fa-heart fa-2xl"></i>
+                </div>
+                <h2 class="text-3xl font-semibold text-start">Fire Service Number</h2>
+                <p class="text-start text-xl">Fire Service</p>
+                <p class="text-start text-3xl font-bold">999</p>
+                <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-xl">Fire</button>
+                <div class="flex justify-between gap-4">
+                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                            class="fa-regular fa-copy"></i>
+                        Copy
+                    </button>
+                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                        Call
+                    </button>
+                </div>
+                <script src="./script.js"></script>
 </body>
 
 </html>
