--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             </div>
             <div class="flex items-center gap-6">
                 <div
-                    class="w-[123px] h-[52px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center items-center text-white text-lg font-semibold border border-gray-200">
-                    <img src="./assets/heart.png" class="max-h-[35px]" alt="">
+                    class="w-[123px] h-[52px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center items-center text-white text-lg font-semibold border border-gray-200 gap-3">
+                    <h2 class="font-bold text-black text-xl"><span id="heart-score-board">0</span></h2><img
+                        src="./assets/heart.png" class="max-h-[35px]" alt="">
                 </div>
                 <div
-                    class="w-[123px] h-[52px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center items-center text-white text-lg font-semibold border border-gray-200">
+                    class="w-[123px] h-[52px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center items-center text-white text-lg font-semibold border border-gray-200 gap-3">
+                    <h2 class="font-bold text-black text-xl"><span id="icon-score-board">0</span></h2>
                     <img src="./assets/coin.png" class="max-h-[35px]" alt="">
                 </div>
                 <div
@@ -55,7 +57,7 @@
     </section>
 
     <!-- different service center -->
-    <div class="bg-[#F5FFF6] max-w-[1800px] mx-auto py-12">
+    <div class=" bg-[#F5FFF6] max-w-[1800px] mx-auto py-12">
         <div class="min-h-[1200px] grid grid-cols-4 gap-6 items-stretch">
             <!-- জাতীয় জরুরি সেবা -->
             <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
@@ -63,206 +65,208 @@
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
-                <h2 class="text-2xl font-bold text-start">জাতীয় জরুরি সেবা</h2>
+                <h2 id="name-national-emer" class="text-2xl font-bold text-start">জাতীয় জরুরি সেবা</h2>
                 <p class="text-start text-lg">National Emergency</p>
-                <p class="text-start text-2xl font-bold">999</p>
+                <p id="call-emer" class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">সার্বজনীন</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button id="btn-copy"
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button id="btn-national-emer" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                            class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- পুলিশ -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/police.png" class="max-h-[40px]" alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">পুলিশ</h2>
                 <p class="text-start text-lg">Police</p>
                 <p class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">পুলিশ</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- ফায়ার সার্ভিস -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/fire-service.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">ফায়ার সার্ভিস</h2>
                 <p class="text-start text-lg">Fire Service</p>
                 <p class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">ফায়ার</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- call history -->
-
-            <div class=" row-span-3 bg-white shadow-lg border-none p-5 rounded-xl h-full">
+            <div id="call-history-list" class=" row-span-3 bg-white shadow-lg border-none p-5 rounded-xl h-full">
                 <div class="flex justify-between items-center p-2">
                     <div class="flex justify-between items-center gap-14">
                         <div class="flex justify-center items-center gap-2">
                             <i class="fa-regular fa-clock fa-2xl"></i>
                             <h2 class="text-2xl font-semibold">Call History</h2>
                         </div>
-                        <button
+
+                        <button id="clear-btn"
                             class="w-[130px] h-[60px] rounded-full bg-[#00A63E] text-xl font-semibold text-white">Clear</button>
                     </div>
                 </div>
+                <ul id="call-history-list" class="list-none"></ul>
             </div>
             <!-- অ্যাম্বুলেন্স -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/ambulance.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">অ্যাম্বুলেন্স</h2>
                 <p class="text-start text-lg">Ambulance</p>
                 <p class="text-start text-2xl font-bold">1994-999999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">স্বাস্থ্য</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
-
             <!-- নারী ও শিশু সহায়তা -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/images.png" class="max-h-[40px]" alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">নারী ও শিশু সহায়তা</h2>
                 <p class="text-start text-lg">Women & Child Helpline</p>
                 <p class="text-start text-2xl font-bold">109</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">সহায়তা</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- দুদক -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/Anti-Corruption-Commission-Logo.png"
                             class="h-[40px] w-[40px]" alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">দুদক</h2>
                 <p class="text-start text-lg">Anti-Corruption</p>
                 <p class="text-start text-2xl font-bold">106</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">সরকারি</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- বিদ্যুৎ বিভ্রাট -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/BPDB_logo.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">বিদ্যুৎ বিভ্রাট</h2>
                 <p class="text-start text-lg">Electricity Outage</p>
                 <p class="text-start text-2xl font-bold">16216</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">বিদ্যুৎ</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- ব্র্যাক -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/brac.png" class="max-h-[40px]" alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">ব্র্যাক </h2>
                 <p class="text-start text-lg">Brac</p>
                 <p class="text-start text-2xl font-bold">16445</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">এনজিও</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- বাংলাদেশ রেলওয়ে -->
-            <div class="bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
+            <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center border border-red-600">
                     <div class="bg-gray-200 p-3 rounded-xl"><img src="./assets/Bangladesh-Railway.png"
                             class="max-h-[40px]" alt="">
                     </div>
-                    <i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">বাংলাদেশ রেলওয়ে </h2>
                 <p class="text-start text-lg">Bangladesh Railway</p>
                 <p class="text-start text-2xl font-bold">163</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">পরিবহন</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button class="bg-white text-gray-600 h-9 w-full rounded-lg border border-gray-300"><i
+                    <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-9 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
