--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <img src="./assets/coin.png" class="max-h-[35px]" alt="">
                 </div>
                 <div
-                    class="w-[123px] h-[52px] rounded-full bg-[#00A63E] flex justify-center items-center text-white text-lg font-semibold">
-                    0
+                    class="w-[123px] h-[52px] rounded-full bg-[#00A63E] flex justify-center items-center text-white text-lg font-semibold gap-3">
+                    <h2 class="font-semibold text-white text-xl"><span id="copy-score-board">0</span></h2>
                     Copy
                 </div>
             </div>
@@ -72,8 +72,7 @@
                 <p id="call-emer" class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">সার্বজনীন</button>
                 <div class="flex justify-between gap-4 py-2">
-                    <button id="btn-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                    <button class="button-copy bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
@@ -90,16 +89,17 @@
                     </div>
                     <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
-                <h2 class="text-2xl font-bold text-start">পুলিশ</h2>
+                <h2 id="name-police" class="text-2xl font-bold text-start">পুলিশ</h2>
                 <p class="text-start text-lg">Police</p>
-                <p class="text-start text-2xl font-bold">999</p>
+                <p id="call-police" class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">পুলিশ</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button id="btn-police" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                            class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
@@ -112,22 +112,23 @@
                     </div>
                     <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
-                <h2 class="text-2xl font-bold text-start">ফায়ার সার্ভিস</h2>
+                <h2 id="name-fire" class="text-2xl font-bold text-start">ফায়ার সার্ভিস</h2>
                 <p class="text-start text-lg">Fire Service</p>
-                <p class="text-start text-2xl font-bold">999</p>
+                <p id="call-fire" class="text-start text-2xl font-bold">999</p>
                 <button class="bg-gray-100 text-gray-600 w-1/5 rounded-2xl border-none text-lg">ফায়ার</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i class="fa-solid fa-phone"></i>
+                    <button id="btn-fire" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                            class="fa-solid fa-phone"></i>
                         Call
                     </button>
                 </div>
             </div>
             <!-- call history -->
-            <div id="call-history-list" class=" row-span-3 bg-white shadow-lg border-none p-5 rounded-xl h-full">
+            <div id="call-history-container" class=" row-span-3 bg-white shadow-lg border-none p-5 rounded-xl h-full">
                 <div class="flex justify-between items-center p-2">
                     <div class="flex justify-between items-center gap-14">
                         <div class="flex justify-center items-center gap-2">
