mobile responsive completed

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
 
         <!-- banner section -->
 
-        <div class="max-w-[1920px] h-[160px] md:h-[240px] mx-auto bg-gradient-to-r from-[#013223] 
+        <div class="max-w-[1920px] md:h-[240px] mx-auto bg-gradient-to-r from-[#013223] 
         via-[#006747] to-[#013223]  
          flex flex-col items-center justify-center text-center text-white px-3 py-4">
+            <img src="./assets/logo-dark.png" class="h-[80px] mb-2" alt="">
             <h1 class="text-2xl md:text-4xl font-bold mb-2 md:mb-4">Emergency Service Directory</h1>
             <p class="font-semibold text-sm md:text-lg">Government Emergency Services at Your
                 Fingertip – A Project by Government
@@ -60,7 +61,8 @@
             <!-- জাতীয় জরুরি সেবা -->
             <div class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between">
                 <div class="flex justify-between items-center">
-                    <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/police.png" class="max-h-[40px]" alt="">
+                    <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
+                            alt="">
                     </div>
                     <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i>
                     </div>
@@ -74,7 +76,8 @@
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-national-emer" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-national-emer"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-transform duration-2000"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
